--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,26 +67,7 @@ jobs:
         id: get-includes
         run: echo "files=$(node ./.github/scripts/get-includes.js)" >> $GITHUB_OUTPUT
 
-      # create a zip file with all files required by the module to add to the release
-      - name: Zip Files
-        working-directory: ./dist
-        run: zip -r ../module.zip ${{steps.get-includes.outputs.files}}
-
-      # Update the 'latest' release
-      - name: Update Latest Release
-        id: create_latest_release
-        uses: ncipollo/release-action@v1
-        if: endsWith(github.ref, 'master')
-        with:
-          allowUpdates: true
-          name: Latest
-          draft: false
-          prerelease: false
-          token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: './dist/module.json, ./module.zip'
-          tag: latest
-
-      #Substitute the Manifest and Download URLs in the module.json
+      # Substitute the Manifest and Download URLs in the module.json
       - name: Substitute Manifest and Download Links For Versioned Ones
         id: sub_manifest_link_version
         uses: microsoft/variable-substitution@v1
@@ -97,12 +78,31 @@ jobs:
           manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
           download: https://github.com/${{github.repository}}/releases/download/${{steps.get-version.outputs.version}}/module.zip
 
+      # Create a zip file with all files required by the module to add to the release
+      - name: Zip Files
+        working-directory: ./dist
+        run: zip -r ../module.zip ${{steps.get-includes.outputs.files}}
+
+      # Update the 'latest' release
+      - name: Update Latest Release
+        id: create_latest_release
+        uses: ncipollo/release-action@v1
+        if: endsWith(github.ref, 'master')
+        with:
+          allowUpdates: false
+          name: Latest
+          draft: false
+          prerelease: false
+          token: ${{ secrets.GITHUB_TOKEN }}
+          artifacts: './dist/module.json, ./module.zip'
+          tag: latest
+
       # Create a release for this specific version
       - name: Create Version Release
         id: create_version_release
         uses: ncipollo/release-action@v1
         with:
-          allowUpdates: true # set this to false if you want to prevent updating existing releases
+          allowUpdates: false # set this to false if you want to prevent updating existing releases
           name: Release ${{ steps.get-version.outputs.version }}
           draft: false
           prerelease: false
