--- a/package.json
+++ b/package.json
@@ -16,18 +16,16 @@
   "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
-    "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
-    "@rollup/plugin-typescript": "^11.1.2",
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
     "@tsconfig/svelte": "^3.0.0",
     "@types/jest": "^28.1.6",
+    "@types/jquery": "^3.5.19",
     "@types/lodash": "^4.14.191",
     "@types/sinon": "^10.0.13",
     "fs-extra": "^10.1.0",
     "jest": "^28.1.3",
     "less": "^4.1.3",
     "lodash": "^4.17.21",
-    "sinon": "^14.0.0",
     "svelte": "^3.55.1",
     "svelte-check": "^3.0.3",
     "ts-jest": "^28.0.7",
