--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vite": "^4.4.11"
   },
   "dependencies": {
-    "@types/node": "^18.7.3"
+    "@types/node": "^18.7.3",
+    "crypto": "^1.0.1"
   }
 }
