--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@types/jest": "^29.5.5",
     "@types/jquery": "^3.5.22",
     "@types/lodash": "^4.14.199",
+    "autoprefixer": "^10.4.16",
     "fs-extra": "^11.1.1",
     "jest": "^29.7.0",
     "less": "^4.2.0",
     "lodash": "^4.17.21",
+    "postcss": "^8.4.31",
     "svelte": "^4.2.1",
     "svelte-check": "^3.5.2",
+    "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
