--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@skeletonlabs/skeleton": "^2.11.0",
     "@skeletonlabs/tw-plugin": "^0.4.1",
     "@sveltejs/vite-plugin-svelte": "^5.1.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "@tsconfig/svelte": "^5.0.4",
     "@types/jest": "^29.5.14",
     "@types/jquery": "^3.5.32",
@@ -29,9 +30,11 @@
     "less": "^4.3.0",
     "lodash": "^4.17.21",
     "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "postcss-nesting": "^13.0.2",
     "svelte": "^5.34.6",
     "svelte-check": "^4.2.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.10",
     "ts-jest": "^29.4.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
