--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.3",
     "@skeletonlabs/skeleton": "^3.1.3",
     "@skeletonlabs/skeleton-svelte": "^1.2.3",
     "@skeletonlabs/tw-plugin": "^0.4.1",
@@ -33,6 +36,7 @@
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
     "postcss-nesting": "^13.0.2",
+    "semantic-release": "^24.2.5",
     "svelte": "^5.34.7",
     "svelte-check": "^4.2.2",
     "tailwindcss": "^4.1.10",
