--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,6 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -66,6 +65,81 @@ jobs:
           name: dist
           path: dist
           retention-days: 1
+
+      - name: Preview release
+        id: preview
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "## 📦 Release Preview" > preview.md
+          echo "" >> preview.md
+          echo "Running semantic-release dry run to preview what would be released..." >> preview.md
+          echo "" >> preview.md
+          
+          # Capture the dry run output
+          if OUTPUT=$(npx semantic-release --dry-run --no-ci 2>&1); then
+            # Check if a release would be made
+            if echo "$OUTPUT" | grep -q "The next release version is"; then
+              VERSION=$(echo "$OUTPUT" | grep -oP 'The next release version is \K[0-9]+\.[0-9]+\.[0-9]+')
+              echo "🚀 **A new release would be created: \`v$VERSION\`**" >> preview.md
+              echo "" >> preview.md
+          
+              # Extract release notes if available
+              if echo "$OUTPUT" | grep -q "Release note"; then
+                echo "### 📝 Release Notes Preview" >> preview.md
+                echo '```' >> preview.md
+                echo "$OUTPUT" | sed -n '/Release note/,/^$/p' | head -20 >> preview.md
+                echo '```' >> preview.md
+              fi
+            else
+              echo "ℹ️ **No release would be created** - no relevant changes detected." >> preview.md
+              echo "" >> preview.md
+              echo "Changes in this PR don't trigger a release based on conventional commit format." >> preview.md
+            fi
+          else
+            echo "⚠️ **Could not determine release preview** - there may be an issue with the semantic-release configuration." >> preview.md
+          fi
+          
+          echo "" >> preview.md
+          echo "---" >> preview.md
+          echo "*This preview is based on the conventional commit format. Actual release will happen when PR is merged to main.*" >> preview.md
+
+      - name: Comment PR
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+             const preview = fs.readFileSync('preview.md', 'utf8');
+            
+             // Check if we already have a preview comment
+             const { data: comments } = await github.rest.issues.listComments({
+               owner: context.repo.owner,
+               repo: context.repo.repo,
+               issue_number: context.issue.number,
+             });
+            
+             const botComment = comments.find(comment => 
+               comment.user.type === 'Bot' && 
+               comment.body.includes('## 📦 Release Preview')
+             );
+            
+             if (botComment) {
+               // Update existing comment
+               await github.rest.issues.updateComment({
+                 owner: context.repo.owner,
+                 repo: context.repo.repo,
+                 comment_id: botComment.id,
+                 body: preview
+               });
+             } else {
+               // Create new comment
+               await github.rest.issues.createComment({
+                 owner: context.repo.owner,
+                 repo: context.repo.repo,
+                 issue_number: context.issue.number,
+                 body: preview
+               });
+             }
 
   release:
     runs-on: ubuntu-latest
